--- a/pages/styles/global.css
+++ b/pages/styles/global.css
@@ -2,8 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("/fonts/RobotoMono-Regular.ttf");
-@import url("/fonts/ROCKB.TTF");
+@layer base {
+  @font-face {
+    font-family: Roboto Mono;
+    src: url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;600;700&display=swap");
+  }
+}
+
+@layer components {
+  [type="checkbox"]:checked {
+    background-image: url("data:image/svg+xml,%3csvg viewBox='-1 0 18 15' fill='%23262626' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3e%3c/svg%3e");
+  }
+}
 
 article > div > p {
   margin: 2em 0;
@@ -16,4 +26,25 @@ article > div > p > span {
 
 ins {
   font-size: 1.5rem !important;
+}
+
+.pagination > li > a {
+  padding: 1rem 1.25rem;
+  border-radius: 0.5rem;
+  background-color: #f3f4f6;
+}
+
+.pagination > li > a:hover {
+  color: #f9f9f9;
+  background-color: #4100fa;
+}
+
+.pagination > .active > a {
+  background-color: #4100fa;
+}
+
+.pagination > .disabled > a,
+.pagination > .disabled > a:hover {
+  color: #d4d4d8;
+  background-color: #f4f4f5;
 }
