--- a/pages/styles/global.css
+++ b/pages/styles/global.css
@@ -15,18 +15,49 @@
   }
 }
 
-article > div > p {
-  margin: 2em 0;
+.content > p > span {
+  font-size: 1.25rem !important;
 }
 
+article > div > p {
+  margin: 2em 0;
+  text-align: justify;
+}
+
+ins {
+  font-size: 1.25rem !important;
+  color: #4100fa;
+}
+
+.content > iframe {
+  width: 80%;
+  aspect-ratio: 16/9;
+}
+
+.content > p > span > strong {
+  font-size: 1.5rem;
+}
+
+/* 
+article > div > p {
+  margin: 2em 0;
+} */
+/* 
 article > div > p > span {
   text-align: justify;
   font-size: 1.5rem !important;
 }
 
-ins {
-  font-size: 1.5rem !important;
+
+
+.content > iframe {
+  width: 80%;
+  aspect-ratio: 16/9;
 }
+
+.content > p > span > strong {
+  font-size: 2rem;
+} */
 
 .pagination > li > a {
   padding: 1rem 1.25rem;
@@ -47,9 +78,4 @@ ins {
 .pagination > .disabled > a:hover {
   color: #d4d4d8;
   background-color: #f4f4f5;
-}
-
-.content > iframe {
-  width: 80%;
-  aspect-ratio: 16/9;
 }
