--- a/pages/styles/global.css
+++ b/pages/styles/global.css
@@ -80,6 +80,24 @@ article > div > p > span {
   background-color: #f4f4f5;
 }
 
+.swiper-pagination {
+  text-align: left !important;
+  padding-left: 1rem !important;
+  padding-bottom: 2rem !important;
+}
+
+.swiper-pagination-bullet {
+  background: #cfcfcf !important;
+  width: 1.25rem !important;
+  height: 1.25rem !important;
+}
+
+.swiper-pagination-bullet-active {
+  background: #f9f9f9 !important;
+  width: 1.25rem !important;
+  height: 1.25rem !important;
+}
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 .no-scrollbar::-webkit-scrollbar {
   display: none;
