added dashboard, articles, drafts, and trash page

--- a/pages/styles/global.css
+++ b/pages/styles/global.css
@@ -54,6 +54,19 @@ ins {
   text-align: center;
 }
 
+.stats-label{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #FAE62F;
+  padding-top: .5rem;
+  padding-bottom: .5rem;
+}
+
+.stats-label > * {
+  margin-left: 0.5rem;
+}
+
 .table {
   border-spacing: 0 15px;
 }
